mobile site title spacing fix

--- a/_sass/layouts/_site.scss
+++ b/_sass/layouts/_site.scss
@@ -17,6 +17,7 @@
 
     @include media-query($medium-screen) {
       font-size: 2.75em;
+      margin-bottom: $spacing-unit / 8;
     }
   }
 
